k8s/API/ms-admin-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-admin-api
  labels:
    app: ms-admin-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ms-admin-api
  template:
    metadata:
      labels:
        app: ms-admin-api
    spec:
      containers:
        - name: ms-admin-api
          image: wolwer/ms-admin-api
          ports:
            - containerPort: 8081
          resources:
            requests:
              cpu: "100m"
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 180
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 180
            periodSeconds: 30
