k8s/API/ms-pedido-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-pedido-api
  labels:
    app: ms-pedido-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-pedido-api
  template:
    metadata:
      labels:
        app: ms-pedido-api
    spec:
      containers:
        - name: ms-pedido-api
          image: wolwer/ms-pedido-api:v1.0.0
          ports:
            - containerPort: 8082
          resources:
            requests:
              cpu: "100m"
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            initialDelaySeconds: 180
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            initialDelaySeconds: 180
            periodSeconds: 30
