k8s/API/lbms.yaml
apiVersion: v1
kind: Service
metadata:
  name: cliente-external
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: ms-cliente-api
---
apiVersion: v1
kind: Service
metadata:
  name: admin-external
spec:
  type: LoadBalancer
  ports:
    - port: 8081
      targetPort: 8081
  selector:
    app: ms-admin-api
---
apiVersion: v1
kind: Service
metadata:
  name: pedido-external
spec:
  type: LoadBalancer
  ports:
    - port: 8082
      targetPort: 8082
  selector:
    app: ms-pedido-api
