k8s/API/ms-admin-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-admin-api-service
  labels:
    app: ms-admin-api
spec:
  type: NodePort
  selector:
    app: ms-admin-api
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 30002
