k8s/API/ms-cliente-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-cliente-api-service
  labels:
    app: ms-cliente-api
spec:
  type: NodePort
  selector:
    app: ms-cliente-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30001
