k8s/API/ms-pedido-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-pedido-api-service
  labels:
    app: ms-pedido-api
spec:
  type: NodePort
  selector:
    app: ms-pedido-api
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
      nodePort: 30003
