k8s/API/ms-pedido-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ms-pedido-api-ingress
  labels:
    app: ms-pedido-api
spec:
  rules:
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: ms-cliente-api-service
                port:
                  number: 8082
